objects/SalesIncentiveApproval__c.object
<CustomObject>
    <description>SFDC-1908 Sales Incentives</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-1908 Sales Incentive Approvals</description>
        <inlineHelpText>Lookup to Campaign</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Sales Incentive Approvals</relationshipLabel>
        <relationshipName>SalesIncentiveApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC - Sales Incentive Approvals</description>
        <inlineHelpText>Memo field for Commission Team</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionStatus__c</fullName>
        <description>SFDC-1908 Sales Incentive Approvals</description>
        <inlineHelpText>Picklist field for commission team</inlineHelpText>
        <label>Commission Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Opportunity Lost</fullName>
                </value>
                <value>
                    <fullName>Waiting on Finance Info</fullName>
                </value>
                <value>
                    <fullName>Waiting on Rep Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncentiveOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-1908 Sales Incentive Approvals</description>
        <inlineHelpText>Lookup to user, when users are creating for others</inlineHelpText>
        <label>Incentive Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesIncentiveApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>SFDC-1908 Sales Incentive Approvals</description>
        <inlineHelpText>Memo field</inlineHelpText>
        <label>Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-1908 Sales Incentive Approvals</description>
        <inlineHelpText>Lookup to Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Incentive Approvals</relationshipLabel>
        <relationshipName>SalesIncentiveApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ready_for_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-5103087 : Edit access remain unlocked for &quot;New Sales Incentive Approval &quot;related object under &quot;Opportunity&quot; object until &quot;Commission&quot; status is open.</description>
        <inlineHelpText>Check this field to submit this record for approval.</inlineHelpText>
        <label>Ready for Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedOpportunityStatus__c</fullName>
        <description>SFDC-2593 Created for List Views for Sales Incentive Approval records</description>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Related Opportunity Status</label>
        <type>Text</type>
    </fields>
    <label>Sales Incentive Approval</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ApprovedStatuson6WPOpportunities</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RelatedOpportunityStatus__c</field>
            <operation>equals</operation>
            <value>6WP-Closed Won/Order Processed</value>
        </filters>
        <filters>
            <field>CommissionStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Status on 6WP Opportunities</label>
        <queue>SalesIncentiveApprovalQueue</queue>
    </listViews>
    <listViews>
        <fullName>DeclinedStatuson6WPOpportunities</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RelatedOpportunityStatus__c</field>
            <operation>equals</operation>
            <value>6WP-Closed Won/Order Processed</value>
        </filters>
        <filters>
            <field>CommissionStatus__c</field>
            <operation>equals</operation>
            <value>Declined</value>
        </filters>
        <label>Declined Status on 6WP Opportunities</label>
        <queue>SalesIncentiveApprovalQueue</queue>
    </listViews>
    <listViews>
        <fullName>OpenStatuson6WPOpportunities</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RelatedOpportunityStatus__c</field>
            <operation>equals</operation>
            <value>6WP-Closed Won/Order Processed</value>
        </filters>
        <filters>
            <field>CommissionStatus__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Status on 6WP Opportunities</label>
        <queue>SalesIncentiveApprovalQueue</queue>
    </listViews>
    <listViews>
        <fullName>SalesIncentiveApprovalQueue_SalesIncentiveApproval</fullName>
        <filterScope>Queue</filterScope>
        <label>Sales Incentive Approval Queue</label>
        <queue>SalesIncentiveApprovalQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WaitingonFinanceInfoStatuson6WPOpportunities</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RelatedOpportunityStatus__c</field>
            <operation>equals</operation>
            <value>6WP-Closed Won/Order Processed</value>
        </filters>
        <filters>
            <field>CommissionStatus__c</field>
            <operation>equals</operation>
            <value>Waiting on Finance Info</value>
        </filters>
        <label>Waiting on Finance Info Status on 6WP Op</label>
        <queue>SalesIncentiveApprovalQueue</queue>
    </listViews>
    <listViews>
        <fullName>WaitingonRepInfoStatuson6WPOpportunities</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RelatedOpportunityStatus__c</field>
            <operation>equals</operation>
            <value>6WP-Closed Won/Order Processed</value>
        </filters>
        <filters>
            <field>CommissionStatus__c</field>
            <operation>equals</operation>
            <value>Waiting on Rep Info</value>
        </filters>
        <label>Waiting on Rep Info Status on 6WP Op</label>
        <queue>SalesIncentiveApprovalQueue</queue>
    </listViews>
    <nameField>
        <displayFormat>SIA-{000000}</displayFormat>
        <label>Sales Incentive Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Incentive Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>